--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -405,7 +405,7 @@ input:focus {
 }
 
 
-/* background */
+/* background
 
 .card {
     position: relative;
@@ -426,7 +426,7 @@ input:focus {
     height: 100%;
     object-fit: cover;
     opacity: .35;
-}
+} */
 
 
 .headerbg{
@@ -500,6 +500,81 @@ input:focus {
     border-radius: 25px;
 }
 
+/* bestellen 
+------------------------------*/
+.bestelling-info {
+    background: #820661;
+}
+
+.bestelling-info >img {
+    padding-bottom: 0;
+    opacity: .35;
+}
+
+.bestelling-info >.info {
+    left: 0;
+    top: 155px;
+    width: 100%;
+    text-align: center;
+    border-radius: 35px;
+}
+
+.bevestiging-btn {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    border-radius: 0 0 35px 35px;
+}
+
+.bevestiging-btn >h3 {
+    display: block;
+    width: 100%;
+    padding: 13px 0;
+    background: #FB07D2;
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+}
+
+.yes-no-btn {
+    /* position: absolute; */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 69px;
+    /* background: red; */
+    border-radius: 0 0 35px 35px;
+}
+
+.yes-btn {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 50%;
+    height: 69px;
+    padding-left: calc(50% - 80px);
+    background: #F9A10A;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+    line-height: 1.5;
+    border-radius: 0 0 0 35px;
+}
+
+.no-btn {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 50%;
+    height: 69px;
+    padding-right: calc(50% - 120px);
+    background: #9EA1A1;
+    font-size: 40px;
+    font-weight: bold;
+    color: #4A4A4A;
+    line-height: 1.5;
+    border-radius: 0 0 35px 0;
+}
 
 /* completed-logout 
 -----------------------------------*/
@@ -585,11 +660,46 @@ input:focus {
         padding: 290px 130px 70px ;
     }
 
+    
     .info {
         top: 150px;
         left: calc(50% - 210px);
         width: 420px;
         height: 470px;
+    }
+    
+    .info >.hi-user {
+        position: absolute;
+        left: calc(50%);
+        transform: translateX(-50%);
+        top: 35px;
+        display: block;
+        font-size: 16px;
+        color: rgba(0, 0, 0, .75);
+    }
+
+    .bestellen-btn {
+        position: absolute;
+        left: calc(50% - 150px);
+        bottom: 6vh;
+        width: 300px;
+        height: 69px;
+        padding-top: 17px;
+        background: #0ABAFC;
+        text-align: center;
+        text-shadow: 0 0 2px rgb(0, 0, 0);
+        border-radius: 25px;
+    }
+
+    .bestelling-info >.info {
+        position: absolute;
+        top: 150px;
+        left: calc(50% - 210px);
+        display: block;
+        width: 420px;
+        height: 470px;
+        background:#fff;
+        border-radius: 35px;
     }
 
     .bestelling-finish >.info {
