--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -283,6 +283,20 @@ input:focus {
 
 /* Bestemmingen pagina 
 --------------------------------------*/
+.headerbg{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 20vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom right;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(../img/bg_1.jpg);
+    background-blend-mode: multiply;
+}
+
 .header-img {
     position: absolute;
     left: 0;
@@ -327,29 +341,43 @@ input:focus {
 .event-raad {
     position: absolute;
     right: 0%;
-    transform: translateX(65%);
-    top: 170px;
+    transform: translateX(85%);
+    transform-origin: center;
+    top: 50vh;
     display: block;
-    padding: 9px 20px 9px 13px;
-    background-color: rgba(0, 0, 0, .55);
+    width: 200px;
+    height: 90px;
+    padding: 35px 9px;
+    background-color: rgba(0, 0, 0, .15);
     font-size: 16px;
     font-weight: bold;
-    border-radius: 20px;
+    border: 1px solid #999;
+    border-radius: 9px;
     box-shadow: 0 3px 3px rgba(0, 0, 0, .65);
 }
 
 .event-raad >a {
-    color: rgba(255, 255, 255, .65);
+    position: relative;
+    display: block;
+    color: rgba(0, 0, 0, .65);
     text-decoration: none;    
 }
 
 .event-raad:hover {
-    transform: translateX(0%);
+    transform: translateX(15%);
+    background-color: rgba(154, 4, 144, .85);
+    font-size: 16px;
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
+    border: 1px solid #c2c2c2;
     transition: all .15s cubic-bezier(0.55, 0.085, 0.68, 0.53);
 }
 
 .event-raad:active {
     background-color: rgba(0, 0, 0, .85);
+}
+
+.event-raad:hover >a {
+    color: #fff;
 }
 
 .profile >img {
@@ -392,44 +420,70 @@ input:focus {
     padding: 290px 50px 70px ;
 }
 
-
-/* background
-
-.card {
-    position: relative;
-    width: 50vw;
-    height: 35vh;
-    background-color: #820661;
-    border-radius: 35px;
+.bestemming-box {
+    height: 200px;
+    border-radius: 9px;
+    background-color: #f60;
+    background-size: cover;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .5);
     overflow: hidden;
 }
 
-.card2 {
-    background-color: #60088B;
-}
-
-.card > img {
+.bestemming-box > img{
     display: block;
     width: 100%;
     height: 100%;
+    position: relative;
     object-fit: cover;
-    opacity: .35;
-} */
-
-
-.headerbg{
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 20vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom right;
-    background-color: rgba(0, 0, 0, 0);
-    background-image: url(../img/bg_1.jpg);
-    background-blend-mode: multiply;
 }
+
+.card {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: -100%;
+    left: 0;
+    background-color: rgba(0, 0, 0, .55);
+    opacity: 0;
+}
+
+.card:hover {
+    /* background-color: rgba(0, 0, 0, .65); */
+    opacity: 1;
+    transition: all .12s ease-in-out;
+}
+
+.card:hover .subcard{
+    bottom: 0;
+    transition: all .23s ease-in-out;
+}
+
+.card >h5 {
+    display: block;
+    width: 100%;
+    position: absolute;
+    bottom: 46px;
+    text-align: center;
+    color: rgba(255, 255, 255, .75);
+}
+
+.subcard{
+    width: 100%;
+    height: 39px;
+    position: absolute;
+    left: 0;
+    bottom: -39px;
+    text-align: center;
+    line-height: 200%;
+    background-color: rgba(249, 145, 10, 0.55);
+}
+
+.subcard >a {
+    font-size: 12px;
+    color: #fff;
+    text-decoration: none;
+}
+
 
 /* besteming
 ------------------------------ */
