--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -28,9 +28,10 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom right;
-    background-color: rgba(0, 0, 0, .85);
+    /* background-color: rgba(0, 0, 0, .85); */
+    background-color: rgba(0, 0, 0, 0.77);
     background-image: url(../img/bg_1.jpg);
-    background-blend-mode: multiply;
+    background-blend-mode:multiply;
 }
 
 .skew-container {
@@ -315,7 +316,7 @@ input:focus {
 .profile-picture {
     position: absolute;
     left: calc(50% - 30px);
-    top: -33px;
+    top: -41px;
     display: block;
     width: 60px;
     height: 60px;
@@ -397,7 +398,7 @@ input:focus {
     position: absolute;
     left: calc(50% + 65px);
     transform: translateX(-50%);
-    top: -20px;
+    top: -23px;
     display: block;
     font-size: 16px;
     color: rgba(255, 255, 255, 1);
@@ -410,20 +411,21 @@ input:focus {
     top: 50px;
     transform: translateX(-50%);
     padding: 5px 8px;
-    background: rgba(255, 255, 255, .65);
+    background: rgba(255, 255, 255, .85);
+    box-shadow: 0 0 35px rgba(255, 255, 255, 1), 0 0 35px rgba(255, 255, 255, 1), 0 0 35px rgba(255, 255, 255, 1);
     border-radius: 9px;
 }
 
 .container-bestemming {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(29vw, 1fr));
     grid-gap: 16px;
-    padding: 290px 50px 70px ;
+    padding: 290px 50px 50px 70px ;
 }
 
 .bestemming-box {
-    height: 200px;
+    height: 47vw;
     border-radius: 9px;
     background-color: #f60;
     background-size: cover;
@@ -464,14 +466,15 @@ input:focus {
     display: block;
     width: 100%;
     position: absolute;
-    bottom: 46px;
+    bottom: 7vw;
+    font-size: 19px;
     text-align: center;
     color: rgba(255, 255, 255, .75);
 }
 
 .subcard{
     width: 100%;
-    height: 39px;
+    height: 7vw;
     position: absolute;
     left: 0;
     bottom: -39px;
@@ -607,6 +610,11 @@ input:focus {
     border-radius: 0 0 0 35px;
 }
 
+.yes-btn:hover,
+.yes-btn:active {
+    background-color: rgb(16, 179, 1);
+}
+
 .no-btn {
     position: absolute;
     right: 0;
@@ -620,6 +628,11 @@ input:focus {
     color: #4A4A4A;
     line-height: 1.5;
     border-radius: 0 0 35px 0;
+}
+
+.no-btn:hover,
+.no-btn:active {
+    color: #fff;
 }
 
 /* completed-logout 
@@ -674,16 +687,45 @@ input:focus {
 /* footer
 -------------------------- */
 footer {
-    padding: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 25px 65px 25px;
     background-color: #e2e2e2;
     text-align: center;
     border-top: 1px solid #c2c2c2;
 }
 
 footer >p {
+    width: 55%;
+    text-align: right;
+    line-height: 1.5;
     color: #777;
 }
 
+footer >P >a {
+    color: #777;
+    text-decoration: none;
+}
+
+.footer-img {
+    width: 45%;
+}
+
+.footer-img >a {
+    display: block;
+    width: 35px;
+    height: 35px;
+    margin-left: 25px;
+}
+
+.footer-img >a >img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: .65;
+}
 
 /* medai query
 ----------------------------- */
@@ -723,10 +765,22 @@ footer >p {
     }
 
     .container-bestemming {
-        grid-template-columns: repeat(auto-fill, minmax(135px, 1fr));
-        padding: 290px 130px 70px ;
+        grid-template-columns: repeat(auto-fill, minmax(19vw, 1fr));
+        padding: 330px 130px 270px ;
     }
     
+    .bestemming-box {
+        height: 30.7vw;
+    }
+
+    .card >h5 {
+        bottom: 5.3vw;
+    }
+
+    .subcard{
+        height: 5vw;
+    }
+
     .info {
         top: 150px;
         left: calc(50% - 210px);
@@ -788,6 +842,23 @@ footer >p {
     .profile-form {
         width: 30vw;
         padding: 0 3vw 3.5vh;
+    }
+
+    .container-bestemming {
+        grid-template-columns: repeat(auto-fill, minmax(13vw, 1fr));
+        padding: 330px 290px 270px ;
+    }
+
+    .bestemming-box {
+        height: 17.8vw;
+    }
+
+    .card >h5 {
+        bottom: 4.5vw;
+    }
+
+    .subcard{
+        height: 4vw;
     }
 }
 
