--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -466,7 +466,7 @@ input:focus {
     display: block;
     width: 100%;
     position: absolute;
-    bottom: 7vw;
+    bottom: 17vw;
     font-size: 19px;
     text-align: center;
     color: rgba(255, 255, 255, .75);
@@ -474,7 +474,7 @@ input:focus {
 
 .subcard{
     width: 100%;
-    height: 7vw;
+    height: 15vw;
     position: absolute;
     left: 0;
     bottom: -39px;
@@ -784,15 +784,16 @@ footer >P >a {
     }
     
     .bestemming-box {
-        height: 30.7vw;
+        /* height: 30.7vw; */
+        height: 11.74vw;
     }
 
     .card >h5 {
-        bottom: 5.3vw;
+        bottom: 5vw;
     }
 
     .subcard{
-        height: 5vw;
+        height: 3.7vw;
     }
 
     .info {
@@ -864,16 +865,9 @@ footer >P >a {
     }
 
     .bestemming-box {
-        height: 17.8vw;
+        height: 8vw;
     }
 
-    .card >h5 {
-        bottom: 4.5vw;
-    }
-
-    .subcard{
-        height: 4vw;
-    }
 }
 
 
