--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -366,9 +366,11 @@ input:focus {
 }
 
 .event-raad:hover {
+    top: 30vh;
+    width: 300px;
+    height: 350px;
     transform: translateX(15%);
     background-color: rgba(154, 4, 144, .85);
-    font-size: 16px;
     text-shadow: 1px 1px 1px rgb(0, 0, 0);
     border: 1px solid #c2c2c2;
     transition: all .15s cubic-bezier(0.55, 0.085, 0.68, 0.53);
@@ -379,6 +381,7 @@ input:focus {
 }
 
 .event-raad:hover >a {
+    font-size: 22px;
     color: #fff;
 }
 
@@ -433,7 +436,7 @@ input:focus {
     overflow: hidden;
 }
 
-.bestemming-box > img{
+.bestemming-box >img {
     display: block;
     width: 100%;
     height: 100%;
@@ -452,7 +455,6 @@ input:focus {
 }
 
 .card:hover {
-    /* background-color: rgba(0, 0, 0, .65); */
     opacity: 1;
     transition: all .12s ease-in-out;
 }
@@ -694,23 +696,22 @@ input:focus {
     border-radius: 0 0 35px 35px;
 }
 
-.complete-btn:hover,
-.complete-btn:active {
+.complete-btn:hover {
     background-color: #F9A10A;
     text-shadow: 0 6px 6px rgba(0, 0, 0, .75);
 } 
 
+.complete-btn:active {
+    background-color: rgba(0, 0, 0, .75);;
+}
 
-
-/* events page
------------------------------ */
+/* Event pagina
+---------------------------------------------------------------------------*/
 .events {
     background-image: url(../img/pexels-aleksandar-pasaric-1134166.jpg);
     background-position: bottom;
 }
 
-/* Event pagina
----------------------------------------------------------------------------*/
 .expandSearch-btn {
     position: absolute;
     width: 100%;
@@ -727,6 +728,17 @@ input:focus {
     text-align: center;
     color: #fff;
 }
+
+.expandSearch-btn >h3:hover {
+    background: rgba(154, 4, 144, .85);
+    color: #F9A10A;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, .75);
+}
+
+.expandSearch-btn >h3:active {
+    background: rgba(0, 0, 0, .85);
+}
+
 /*Event raadplegen
 ----------------------------- */
 
@@ -840,11 +852,11 @@ footer >P >a {
 
     .container-bestemming {
         grid-template-columns: repeat(auto-fill, minmax(19vw, 1fr));
-        padding: 330px 130px 270px ;
+        grid-gap: 19px;
+        padding: 290px 130px 270px ;
     }
     
     .bestemming-box {
-        /* height: 30.7vw; */
         height: 11.74vw;
     }
 
@@ -921,7 +933,7 @@ footer >P >a {
 
     .container-bestemming {
         grid-template-columns: repeat(auto-fill, minmax(13vw, 1fr));
-        padding: 330px 290px 270px ;
+        padding: 290px 290px 270px ;
     }
 
     .bestemming-box {
