Continu verbeteren: sprint_3 week_2 v1.1. CSS aangepast

--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -830,6 +830,10 @@ footer >p >a {
         height: 4.7vw;
     }
 
+    .detail-card >img {
+        padding-bottom: 0;
+    }
+
     .info {
         top: 150px;
         left: calc(50% - 210px);
