--- a/uc8-uc9/css/style.css
+++ b/uc8-uc9/css/style.css
@@ -318,51 +318,6 @@ input:focus {
     margin: auto;
 }
 
-.event-raad {
-    position: absolute;
-    right: 0%;
-    transform: translateX(79%);
-    transform-origin: center;
-    top: 50vh;
-    display: block;
-    width: 200px;
-    height: 90px;
-    padding: 35px 9px;
-    background-color: rgba(0, 0, 0, .15);
-    font-size: 16px;
-    font-weight: bold;
-    border: 1px solid #999;
-    border-radius: 9px;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, .65);
-}
-
-.event-raad >a {
-    position: relative;
-    display: block;
-    color: rgba(0, 0, 0, .65);
-    text-decoration: none;    
-}
-
-.event-raad:hover {
-    top: 30vh;
-    width: 300px;
-    height: 350px;
-    transform: translateX(15%);
-    background-color: rgba(154, 4, 144, .85);
-    text-shadow: 1px 1px 1px rgb(0, 0, 0);
-    border: 1px solid #c2c2c2;
-    transition: all .15s cubic-bezier(0.55, 0.085, 0.68, 0.53);
-}
-
-.event-raad:active {
-    background-color: rgba(0, 0, 0, .85);
-}
-
-.event-raad:hover >a {
-    font-size: 22px;
-    color: #fff;
-}
-
 .profile >img {
     position: relative;
     left: calc(50% - 30px);
@@ -475,6 +430,7 @@ input:focus {
     position: relative;
     width: 100%;
     height: 100vh;
+    background-color: #000;
     overflow: hidden;
 }
 
@@ -484,6 +440,7 @@ input:focus {
     height: 100%;
     padding-bottom: 55vh;
     object-fit: cover;
+    opacity: .35;
 }
 
 .info {
@@ -493,7 +450,7 @@ input:focus {
     display: block;
     width: 100%;
     height: 70%;
-    background:#fff;
+    background:#cafaff;
     border-radius: 35px 35px 0 0;
     box-shadow: 0 3px 6px rgba(0, 0, 0, .75);
 }
@@ -530,7 +487,7 @@ input:focus {
     width: 300px;
     height: 69px;
     padding-top: 17px;
-    background: #0ABAFC;
+    background: #acbfde;
     text-align: center;
     text-shadow: 0 0 2px rgb(0, 0, 0);
     border-radius: 25px;
@@ -538,8 +495,6 @@ input:focus {
 
 .bestellen-btn:hover,
 .bestellen-btn:active {
-    background-color: #005580;
-    border: 1px solid #0ABAFC;
     box-shadow: 0 9px 9px rgba(0, 0, 0, .75);
 }
 
@@ -549,9 +504,6 @@ input:focus {
 
 /* bestellen 
 ------------------------------*/
-.bestelling-info {
-    background: #820661;
-}
 
 .bestelling-info >img {
     padding-bottom: 0;
@@ -577,10 +529,11 @@ input:focus {
     display: block;
     width: 100%;
     padding: 13px 0;
-    background: #FB07D2;
+    background: #acbfde;
     font-size: 30px;
     text-align: center;
     color: #fff;
+    text-shadow: 0 0 2px rgb(0, 0, 0);
 }
 
 .yes-no-btn {
@@ -598,7 +551,9 @@ input:focus {
     width: 50%;
     height: 69px;
     padding-left: calc(50% - 80px);
-    background: #F9A10A;
+    
+    background: #d0b54e;
+    /* background-color: #45be93; */
     font-size: 40px;
     font-weight: bold;
     color: #fff;
@@ -608,7 +563,7 @@ input:focus {
 
 .yes-btn:hover,
 .yes-btn:active {
-    background-color: rgb(16, 179, 1);
+    color: #fff;
     text-shadow: 0 6px 6px rgba(0, 0, 0, .75);
 }
 
@@ -619,25 +574,21 @@ input:focus {
     width: 50%;
     height: 69px;
     padding-right: calc(50% - 120px);
-    background: #9EA1A1;
+    background: #ebd57e;
     font-size: 40px;
     font-weight: bold;
-    color: #4A4A4A;
+    color: #fff;
     line-height: 1.5;
     border-radius: 0 0 35px 0;
 }
 
 .no-btn:hover,
 .no-btn:active {
-    color: #fff;
+    color: #777;
 }
 
 /* completed-logout 
 -----------------------------------*/
-.bestelling-finish {
-    background: #60088B;
-}
-
 .bestelling-finish >img {
     padding-bottom: 0;
     opacity: .35;
@@ -666,7 +617,7 @@ input:focus {
 .complete-btn {
     height: 90px;
     padding-top: 27px;
-    background: #0ABAFC;
+    background: #acbfde;
     font-size: 30px;
     font-weight: bold;
     text-shadow: 0 0 2px rgb(0, 0, 0);
@@ -674,7 +625,6 @@ input:focus {
 }
 
 .complete-btn:hover {
-    background-color: #F9A10A;
     text-shadow: 0 6px 6px rgba(0, 0, 0, .75);
 } 
 
@@ -700,16 +650,14 @@ input:focus {
     display: block;
     width: 100%;
     padding: 13px 0;
-    background: #21E804;
+    background: #d0b54e;
     font-size: 30px;
     text-align: center;
     color: #fff;
 }
 
 .expandSearch-btn >h3:hover {
-    background: rgba(154, 4, 144, .85);
-    color: #F9A10A;
-    text-shadow: 0 3px 3px rgba(0, 0, 0, .75);
+    text-shadow: 0 6px 6px rgba(0, 0, 0, .75);
 }
 
 .expandSearch-btn >h3:active {
